--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,58 +4,65 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ftm.digi1.MainActivity">
+    tools:context="com.example.ftm.digi2.MainActivity">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/t1"
-                android:layout_width="199dp"
-                android:layout_height="36dp"
-                android:gravity="center"
-                android:text="SUN" />
-            <TextView
-                android:id="@+id/t2"
-                android:layout_width="186dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="21" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/t3"
-                android:layout_width="186dp"
-                android:layout_height="36dp"
-                android:gravity="center"
-                android:text="7" />
-            <TextView
-                android:id="@+id/t4"
-                android:layout_width="19dp"
-                android:layout_height="36dp"
-                android:gravity="center"
-                android:text=":" />
-            <TextView
-                android:id="@+id/t5"
-                android:layout_width="91dp"
-                android:layout_height="36dp"
-                android:gravity="right"
-                android:text="3"/>
-            <TextView
-                android:id="@+id/t6"
-                android:layout_width="85dp"
-                android:layout_height="36dp"
-                android:gravity="left"
-                android:text="0" />
-        </LinearLayout>
-    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+       >
+
+        <TextView
+            android:id="@+id/t1"
+            android:layout_width="200dp"
+            android:layout_height="35dp"
+            android:gravity="center"
+            android:text="SUN" />
+
+        <TextView
+            android:id="@+id/t2"
+            android:layout_width="200dp"
+            android:layout_height="35dp"
+            android:layout_alignLeft="@+id/t5"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/t5"
+            android:gravity="center"
+            android:text="21" />
+
+        <TextView
+            android:id="@+id/t3"
+            android:layout_width="200dp"
+            android:layout_height="35dp"
+            android:layout_below="@+id/t1"
+            android:layout_marginTop="15dp"
+            android:layout_toLeftOf="@+id/t4"
+            android:layout_toStartOf="@+id/t4"
+            android:gravity="center"
+            android:text="7" />
+
+        <TextView
+            android:id="@+id/t4"
+            android:layout_width="10dp"
+            android:layout_height="35dp"
+            android:layout_alignBaseline="@+id/t5"
+            android:layout_alignBottom="@+id/t5"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:text=":" />
+
+        <TextView
+            android:id="@+id/t5"
+            android:layout_width="200dp"
+            android:layout_height="35dp"
+            android:layout_alignTop="@+id/t3"
+            android:layout_toEndOf="@+id/t4"
+            android:layout_toRightOf="@+id/t4"
+            android:gravity="center"
+            android:text="30" />
+
+
+
+    </RelativeLayout>
+
+
 </android.support.constraint.ConstraintLayout>
